--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prototype Game1</title>
-    <link rel="stylesheet" href="styles.css">
-    </head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mini Game Hub</title>
+
+    <!-- Pixel Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style/style.css">
+</head>
+
 <body>
+
+    <div class="sky"></div>
+    <div class="cloud-layer"></div>
+
     <header>
-        <h1>🎮 Welcome to Prototype Game1</h1>
+        <h1>🎮 Mini Game Hub</h1>
+        <p>Select a game to play</p>
     </header>
-    <script src="script.js"></script>
+
+    <!-- Green Pixel Panel -->
+    <section class="panel">
+
+        <div class="game-list">
+
+            <div class="game-card">
+                <h2>Clicker Game</h2>
+                <p>Coming Soon</p>
+            </div>
+
+            <div class="game-card">
+                <h2>Memory Match</h2>
+                <p>Coming Soon</p>
+            </div>
+
+            <div class="game-card">
+                <h2>Reaction Test</h2>
+                <p>Coming Soon</p>
+            </div>
+
+            <div class="game-card">
+                <h2>Snake Lite</h2>
+                <p>Coming Soon</p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- Pixel Grass Platform -->
+    <div class="grass"></div>
+
+    <footer>
+        © 2025 Mini Game Hub
+    </footer>
+    
+    <script src="script/script.js"></script>
 </body>
-</html> 
+</html>
