--- a/index.html
+++ b/index.html
@@ -2,48 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Game Hub</title>
 
-    <!-- Pixel Font -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
 
+    <!-- Sky + Clouds -->
     <div class="sky"></div>
     <div class="cloud-layer"></div>
 
+    <!-- Header -->
     <header>
         <h1>🎮 Mini Game Hub</h1>
         <p>Select a game to play</p>
     </header>
 
-    <!-- Green Pixel Panel -->
+    <!-- Game Panel -->
     <section class="panel">
 
         <div class="game-list">
 
+            <!-- CARD 1 -->
             <div class="game-card">
-                <h2>Clicker Game</h2>
+                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
                 <p>Coming Soon</p>
             </div>
 
+            <!-- CARD 2 -->
             <div class="game-card">
-                <h2>Memory Match</h2>
+                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
                 <p>Coming Soon</p>
             </div>
 
+            <!-- CARD 3 -->
             <div class="game-card">
-                <h2>Reaction Test</h2>
+                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
                 <p>Coming Soon</p>
             </div>
 
+            <!-- CARD 4 -->
             <div class="game-card">
-                <h2>Snake Lite</h2>
+                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
                 <p>Coming Soon</p>
             </div>
 
@@ -51,13 +55,18 @@
 
     </section>
 
-    <!-- Pixel Grass Platform -->
+    <!-- Mascot Slime -->
+    <img class="slime" src="assets/images/Screenshot 2025-11-13 143821.png" alt="slime">
+
+    <!-- Grass Platform -->
     <div class="grass"></div>
 
+    <!-- Footer -->
     <footer>
         © 2025 Mini Game Hub
     </footer>
-    
+
     <script src="script/script.js"></script>
 </body>
+
 </html>
