--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
     <!-- Mascot Slime -->
     <img class="slime" src="assets/images/Screenshot 2025-11-13 143821.png" alt="slime">
+    <audio id="sfx-click" src="assets/sounds/click.wav"></audio>
+    <audio id="sfx-select" src="assets/sounds/select.wav"></audio>
+
 
     <!-- Grass Platform -->
     <div class="grass"></div>
