--- a/index.html
+++ b/index.html
@@ -25,31 +25,35 @@
     <!-- Game Panel -->
     <section class="panel">
 
-        <div class="game-list">
+      <div class="game-list">
 
-            <!-- CARD 1 -->
-            <div class="game-card">
-                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
-                <p>Coming Soon</p>
-            </div>
+    <!-- CARD 1 -->
+    <div class="game-card" onclick="playClick()">
+        <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
+        <p class="game-title">🟦 Clicker Game</p>
+        <button class="pixel-btn" onclick="playSelect()">▶ Play</button>
+    </div>
 
-            <!-- CARD 2 -->
-            <div class="game-card">
-                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
-                <p>Coming Soon</p>
-            </div>
+    <!-- CARD 2 -->
+    <div class="game-card" onclick="playClick()">
+        <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
+        <p class="game-title">🧠 Memory Match</p>
+        <button class="pixel-btn" onclick="playSelect()">▶ Play</button>
+    </div>
 
-            <!-- CARD 3 -->
-            <div class="game-card">
-                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
-                <p>Coming Soon</p>
-            </div>
+    <!-- CARD 3 -->
+    <div class="game-card" onclick="playClick()">
+        <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
+        <p class="game-title">⚡ Reaction Test</p>
+        <button class="pixel-btn" onclick="playSelect()">▶ Play</button>
+    </div>
 
-            <!-- CARD 4 -->
-            <div class="game-card">
-                <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
-                <p>Coming Soon</p>
-            </div>
+    <!-- CARD 4 -->
+    <div class="game-card" onclick="playClick()">
+        <img class="frame" src="assets/images/Screenshot 2025-11-13 143746.png" alt="">
+        <p class="game-title">🐍 Snake Lite</p>
+        <button class="pixel-btn" onclick="playSelect()">▶ Play</button>
+    </div>
 
         </div>
 
