--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Sky + Clouds -->
     <div class="sky"></div>
     <div class="cloud-layer"></div>
+    <div class="sky-spacer"></div>
 
     <!-- Header -->
     <header>
