--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
     </footer>
 
     <script src="script/script.js"></script>
+    <!-- Cute Pixel Sound Effects -->
+<audio id="sfx-click" src="assets/sounds/click.wav" preload="auto"></audio>
+<audio id="sfx-select" src="assets/sounds/select.wav" preload="auto"></audio>
+<audio id="sfx-hover" src="assets/sounds/hover.wav" preload="auto"></audio>
+<audio id="sfx-slime" src="assets/sounds/slime.wav" preload="auto"></audio>
+<audio id="sfx-sparkle" src="assets/sounds/sparkle.wav" preload="auto"></audio>
 </body>
 
 </html>
