--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>
 
+    <!-- 🌥 CLOUD LAYER (behind everything) -->
+    <div id="cloud-layer">
+        <img src="assets/images/cloud.png" class="cloud">
+        <img src="assets/images/cloud.png" class="cloud">
+        <img src="assets/images/cloud.png" class="cloud">
+        <img src="assets/images/cloud.png" class="cloud">
+    </div>
+
     <!-- Header -->
     <header>
         <h1>🎮 Mini Game Hub</h1>
@@ -53,9 +61,7 @@
 
     <!-- Slime Mascot -->
     <img class="slime" src="assets/images/mrslime.png" alt="slime">
-<!-- NES Sound Effects -->
-<audio id="sfx-click" src="assets/sounds/click.wav" preload="auto"></audio>
-<audio id="sfx-select" src="assets/sounds/select.wav" preload="auto"></audio>
+
     <!-- Grass Bottom -->
     <div class="grass"></div>
 
@@ -65,12 +71,13 @@
     </footer>
 
     <script src="script/script.js"></script>
-    <!-- Cute Pixel Sound Effects -->
-<audio id="sfx-click" src="assets/sounds/click.wav" preload="auto"></audio>
-<audio id="sfx-select" src="assets/sounds/select.wav" preload="auto"></audio>
-<audio id="sfx-hover" src="assets/sounds/hover.wav" preload="auto"></audio>
-<audio id="sfx-slime" src="assets/sounds/slime.wav" preload="auto"></audio>
-<audio id="sfx-sparkle" src="assets/sounds/sparkle.wav" preload="auto"></audio>
-</body>
 
+    <!-- Sound Effects -->
+    <audio id="sfx-click" src="assets/sounds/click.wav" preload="auto"></audio>
+    <audio id="sfx-select" src="assets/sounds/select.wav" preload="auto"></audio>
+    <audio id="sfx-hover" src="assets/sounds/hover.wav" preload="auto"></audio>
+    <audio id="sfx-slime" src="assets/sounds/slime.wav" preload="auto"></audio>
+    <audio id="sfx-sparkle" src="assets/sounds/sparkle.wav" preload="auto"></audio>
+
+</body>
 </html>
