--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
 
 <body>
 
-    <!-- 🌥 CLOUD LAYER (behind everything) -->
-    <div id="cloud-layer">
-        <img src="assets/images/cloud.png" class="cloud">
-        <img src="assets/images/cloud.png" class="cloud">
-        <img src="assets/images/cloud.png" class="cloud">
-        <img src="assets/images/cloud.png" class="cloud">
-    </div>
+    <!-- 🌥 SKY + CLOUD STRIP -->
+    <div class="sky"></div>
+    <div class="cloud-layer"></div>
 
     <!-- Header -->
     <header>
