--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
 
-    <!-- 🌥 SKY + CLOUD STRIP -->
-    <div class="sky"></div>
-    <div class="cloud-layer"></div>
+    <!-- 🌥 SKY WRAPPER (holds clouds inside) -->
+    <div class="sky">
+        <div class="cloud-layer"></div>
+    </div>
 
     <!-- Header -->
     <header>
