--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
                 <p class="game-title">🟦 Clicker Game</p>
-                <button class="pixel-btn" onclick="event.stopPropagation(); playSelect()">▶ Play</button>
+              <button class="pixel-btn"
+  onclick="event.stopPropagation(); playSelect(); window.location.href='clicker.html';">
+  ▶ Play
+</button>
             </div>
 
             <div class="game-card" onclick="playClick()">
