--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
                 <p class="game-title">🧠 Memory Match</p>
-                <button class="pixel-btn" onclick="playSelect(event)">▶ Play</button>
+                <button class="pixel-btn"
+  onclick="playSelect(event); window.location.href='memory.html';">
+  ▶ Play
+</button>
+
             </div>
 
             <!-- Reaction Test -->
