--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
                 <p class="game-title">⚡ Reaction Test</p>
-                <button class="pixel-btn" onclick="playSelect(event)">▶ Play</button>
+                <button class="pixel-btn"
+  onclick="playSelect(event); window.location.href='reaction.html';">
+  ▶ Play
+</button>
+
             </div>
 
             <!-- Snake Lite -->
