--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
                 <p class="game-title">🐍 Snake Lite</p>
-                <button class="pixel-btn" onclick="playSelect(event)">▶ Play</button>
+                <button class="pixel-btn"
+  onclick="playSelect(event); window.location.href='snake.html';">
+  ▶ Play
+</button>
+
             </div>
 
         </div>
