--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <!-- Clicker Game -->
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
+                <div class="game-icon">🟦</div>
                 <p class="game-title">🟦 Clicker Game</p>
                 <button class="pixel-btn"
                     onclick="playSelect(event); window.location.href='clicker.html';">
@@ -42,6 +43,7 @@
             <!-- Memory Match -->
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
+                <div class="game-icon">🧠</div>
                 <p class="game-title">🧠 Memory Match</p>
                 <button class="pixel-btn"
   onclick="playSelect(event); window.location.href='memory.html';">
@@ -53,6 +55,7 @@
             <!-- Reaction Test -->
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
+                <div class="game-icon">⚡</div>
                 <p class="game-title">⚡ Reaction Test</p>
                 <button class="pixel-btn"
   onclick="playSelect(event); window.location.href='reaction.html';">
@@ -64,6 +67,7 @@
             <!-- Snake Lite -->
             <div class="game-card" onclick="playClick()">
                 <img class="frame" src="assets/images/GreenUI.png" alt="">
+                <div class="game-icon">🐍</div>
                 <p class="game-title">🐍 Snake Lite</p>
                 <button class="pixel-btn"
   onclick="playSelect(event); window.location.href='snake.html';">
