--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
     <!-- 🌥 SKY WRAPPER (holds clouds inside) -->
     <div class="sky">
-        <div class="cloud-layer"></div>
+       <div class="sky">
+  <div class="cloud-layer cloud-far"></div>
+  <div class="cloud-layer cloud-near"></div>
+</div>
     </div>
 
     <!-- Header -->
