--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
        <div class="sky">
   <div class="cloud-layer cloud-far"></div>
   <div class="cloud-layer cloud-near"></div>
+
+  
+  <div class="horizon"></div>
+
 </div>
     </div>
 
