--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </div>
 
 <div class="horizon"></div>
+<!-- 🕊 Birds + ✨ Particles -->
+<div id="birds"></div>
+<div id="particles"></div>
 
     <!-- Header -->
     <header>
