--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <!-- Clouds band -->
     <div class="clouds" aria-hidden="true"></div>
+<!-- NEW: floating SpriteSlime in the sky -->
+<img class="sprite-slime-float" src="assets/images/SpriteSlime.png" alt="Sprite slime" />
 
     <!-- Title under clouds -->
     <header class="hud">
