--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
         </div>
       </section>
     </main>
-
-    <!-- Slime -->
-    <img class="slime" src="assets/images/SpriteSlime.png" alt="Slime character">
+<img class="mrslime" src="assets/images/mrslime.png" alt="Mr Slime" />
 
     <!-- Ground -->
     <div class="ground" aria-hidden="true"></div>
