--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
     <!-- Clouds band -->
     <div class="clouds" aria-hidden="true"></div>
-<!-- NEW: floating SpriteSlime in the sky -->
-<img class="sprite-slime-float" src="assets/images/SpriteSlime.png" alt="Sprite slime" />
 
     <!-- Title under clouds -->
     <header class="hud">
@@ -103,10 +101,14 @@
         </div>
       </section>
     </main>
-<img class="mrslime" src="assets/images/mrslime.png" alt="Mr Slime" />
+<!-- Floating SpriteSlime -->
+<img class="sprite-slime-float" src="assets/images/SpriteSlime.png" alt="Sprite slime" />
 
-    <!-- Ground -->
-    <div class="ground" aria-hidden="true"></div>
+<!-- Ground Mr Slime -->
+<img class="mrslime" src="assets/images/mrslime.png" alt="Mr slime" />
+
+<!-- Ground -->
+<div class="ground" aria-hidden="true"></div>
 
     <footer class="footer">
       🌸 © 2025 Mini Game Hub
