--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <!-- Clicker -->
           <article class="game-card">
             <div class="card-inner">
-              <div class="icon-frame">
-                <img src="assets/icons/clicker.png" alt="" class="card-icon">
-              </div>
+             <div class="icon-frame">
+  <div class="emoji-icon" aria-hidden="true">🟦</div>
+</div>
               <h3 class="card-title">🟦 Clicker Game</h3>
               <a class="pixel-btn"
                  href="clicker.html"
@@ -54,8 +54,9 @@
           <article class="game-card">
             <div class="card-inner">
               <div class="icon-frame">
-                <img src="assets/icons/memory.png" alt="" class="card-icon">
-              </div>
+  <div class="emoji-icon" aria-hidden="true">🧠</div>
+      </div>
+
               <h3 class="card-title">🧠 Memory Match</h3>
               <a class="pixel-btn"
                  href="memory.html"
@@ -70,8 +71,9 @@
           <article class="game-card">
             <div class="card-inner">
               <div class="icon-frame">
-                <img src="assets/icons/reaction.png" alt="" class="card-icon">
-              </div>
+  <div class="emoji-icon" aria-hidden="true">⚡</div>
+</div>
+
               <h3 class="card-title">⚡ Reaction Test</h3>
               <a class="pixel-btn"
                  href="reaction.html"
@@ -86,8 +88,9 @@
           <article class="game-card">
             <div class="card-inner">
               <div class="icon-frame">
-                <img src="assets/icons/snake.png" alt="" class="card-icon">
-              </div>
+  <div class="emoji-icon" aria-hidden="true">🐍</div>
+</div>
+
               <h3 class="card-title">🐍 Snake Lite</h3>
               <a class="pixel-btn"
                  href="snake.html"
