--- a/snake.html
+++ b/snake.html
@@ -6,7 +6,7 @@
   <title>Snake Lite</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="./style/theme.css?v=1">
   <link rel="stylesheet" href="style/snake.css">
 </head>
 
